--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.2.38",
+    "bootstrap": "^5.2.1",
+    "bootstrap-vue-3": "^0.3.7",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "popper.js": "^1.16.1",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
