--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "bootstrap": "^5.2.1",
     "bootstrap-vue-3": "^0.3.7",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-carousel": "^0.2.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
