--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "bootstrap": "^5.2.1",
     "bootstrap-vue-3": "^0.3.7",
+    "vue-pdf-embed": "^1.1.5",
     "vue-router": "^4.1.5",
     "vue3-carousel": "^0.2.8"
   },
